--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,7 +3,7 @@ $font-main: "Saol Display";
 $font-sub: "Scheherazade";
 $font-basic: "Roboto";
 $font-korea-main: "Chosunilbo_myungjo";
-$font-korea-sub: "S-Core Dream";
+$font-korea-sub: "S-CoreDream-3Light";
 $basic-font-size : 14px;
 $basic-line-height : 2;
 // color
