--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -243,8 +243,14 @@
 // Reference
 #referCont {}
 .referCont {
+    margin-bottom: 30vh;
+    font-family: $font-korea-sub;
 
     h2 {}
+
+    .javascript {
+        margin-top: 10vh;
+    }
 
     ul {
         border-top: 1px solid #000;
@@ -252,9 +258,48 @@
     li {
         border-bottom: 1px solid #000;
         padding: 20px;
+        transition: all 0.33s;
 
         a {
             font-family: $font-korea-sub;
+            display: flex;
+
+            &:hover {
+                background: rgba(0, 0, 0, 0.1);
+            }
+            .alpha {
+                flex: 0 0 10%;
+            }
+            .tag {
+                flex: 0 0 20%;
+            }
+            .desc {
+                flex: 0 0 70%;
+            }
+        }
+    }
+}
+.referDetail {
+    h3 {
+        font-family: $font-korea-sub;
+        font-size: 2rem;
+        padding-bottom: 10px;
+        border-bottom: 2px solid #000;
+    }
+
+    dl {
+        display: flex;
+
+        dt {
+            flex: 1 1 10%;
+            padding: 20px 0;
+            border-bottom: 1px solid #000;
+            text-align: center;
+        }
+        dd {
+            flex: 1 1 90%;
+            padding: 20px 0;
+            border-bottom: 1px solid #000;
         }
     }
 }
@@ -265,6 +310,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding-bottom: 20vh;
     .ani {
         flex: 0 0 49%;
         margin-bottom: 80px;
@@ -413,12 +459,11 @@
     }
 
     .site {
-        margin-bottom: 30px;
+        margin-bottom: 60px;
         .siteImg {
 
         }
         .siteText {
-            background-color: #151515;
             color: $white;
             padding: 35px;
             
@@ -429,7 +474,7 @@
                 margin-bottom: 15px;
             }
             p {
-                font-family: $font-basic;
+                font-family: $font-korea-sub;
                 font-size: 12px;
                 color: #b0aead;
             }
